<resources>
    <string name="app_name">HorariosCTPI</string>
    <string name="creativas">Industrias Creativas</string>
    <string name="adsi">ADSI</string>
    <string name="ingresenombredeusuario">Ingrese nombre de usuario</string>
    <string name="ingreseclave">Ingrese clave</string>
    <string name="iniciarSesion">Iniciar Sesión</string>

    <string name="jornadamanan">Jornada Mañana</string>
    <string name="jornatarde">Jornada Tarde</string>
    <string name="jornanoche">Jornada Noche</string>
    <string name="horamanana">Horario 7:00-13:00</string>
    <string name="horatarde">Horario 13:00-19:00</string>
    <string name="horanoche">Horario 19:00-22:00</string>
    <string name="programa">Programa</string>
    <string name="guardar">Guardar</string>


    <string name="informacion">Información del Programa</string>
    <string name="tecnologo">Técnologo</string>
    <string name="instructorlider">Instructor Líder</string>
    <string name="ficha">Ficha:</string>

    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>

    <string name="instructores">Instructores</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
